Add contact download

--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,8 @@
 		"endroid/qrcode": "1.*@dev",
 		"sabre/vobject": "3.2.*@dev",
 		"thujohn/pdf": "dev-master",
-		"maatwebsite/excel": "dev-master"
-		
+		"maatwebsite/excel": "dev-master",
+		"Chumper/Zipper": "dev-master"
 	},
 	"autoload": {
 		"classmap": [
