--- a/composer.json
+++ b/composer.json
@@ -27,8 +27,7 @@
 		"fitztrev/laravel-html-minify": "dev-master",
 		"vinicius73/seotools": "dev-master",
 		"davejamesmiller/laravel-aliases": "dev-master",
-		"graham-campbell/throttle": "0.2.*@alpha",
-		"frozennode/xssinput": "dev-master"
+		"graham-campbell/throttle": "0.2.*@alpha"
 	},
 	"autoload": {
 		"classmap": [
@@ -42,7 +41,7 @@
 		"psr-0": {
             "HMIF\\": "app",
             "Felixkiss\\SlugRoutes\\": "app/felixkiss/slug-routes/src",
-            "Qwildz\\Ardent\\": "app/packages/qwildz/ardent/src"
+            "Qwildz": "app/packages/qwildz/core/src"
         }
 	},
 	"scripts": {
