--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
 		"patricktalmadge/bootstrapper": "dev-develop",
 		"thomaswelton/laravel-gravatar": "dev-master",
 		"davejamesmiller/laravel-breadcrumbs": "dev-master",
-		"intervention/image": "1.*",
+		"intervention/image": "1.6.2",
 		"kmd/logviewer": "1.1.*",
 		"machuga/authority-l4": "2.1.*@dev",
 		"cviebrock/eloquent-sluggable": "dev-develop",
