--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
 		"laravelbook/ardent": "dev-master",
 		"felixkiss/slug-routes": "dev-master",
 		"felixkiss/uniquewith-validator": "1.1.*",
+        "mccool/laravel-auto-presenter": "~2.2",
 		"fitztrev/laravel-html-minify": "dev-master",
 		"cviebrock/eloquent-sluggable": "dev-master",
 		"qwildz/localized-eloquent-date": "dev-master",
